src/objects/ssv4__DebugLog__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__BrowserHeader__c</fullName>
        <label>Browser Header</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__Debug__c</fullName>
        <label>Debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__LineNumber__c</fullName>
        <label>LineNumber</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__SendEmailStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__Stack__c</fullName>
        <label>Stack</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ssv4__UserTxt__c</fullName>
        <label>UserTxt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DebugLog</label>
    <listViews>
        <fullName>ssv4__All1</fullName>
        <columns>NAME</columns>
        <columns>ssv4__LineNumber__c</columns>
        <columns>ssv4__UserTxt__c</columns>
        <columns>ssv4__Url__c</columns>
        <columns>ssv4__Debug__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DL-{YYYY}.{MM}.{DD}-{0000}</displayFormat>
        <label>DebugLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DebugLogs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>